	 receives a delete-event.
20031027 ui/gtk: "delete-event" is spelt "delete-event", not
	 "delete_event".
20031027 widget/widget.c: Win32 timing routines (Marek).
20031028 Generalise the timer routines (see hacking/timer.txt).
20031028 fuse.[ch], machine.c, utils.c: when looking for ROM/library
	 files, look relative to the directory Fuse started in, not the
	 current directory.
20031028 sdlsound.c: fix memset typo (Marek).
20031028 timer.c: restore old timers only if they exist in timer_pop().
20031028 timer.c: ensure we have the prototype for strerror().
20031029 osssound.c, sdlsound.c, sunsound.c: ensure that we don't try and
	 recursively open the sound device if an error occurs when opening
	 it.
20031029 timer.c: fix typos in Win32 time routines (Marek).
20031029 trdos.c, utils.c: don't assume temp path ends with a slash
	 (Marek).
20031029 settings.pl, utils.[ch], ui/uijoystick.c: add and use
	 utils_get_home_path function.
20031030 machine.c, utils.c: make machine_find_rom and utils_find_lib work
	 if argv[0] is a full path.
20031030 Merge machine_find_rom and utils_find_lib into one
	 utils_find_auxiliary_file routine.
20031030 ui/ui.h, ui/gtk/gtkui.c, ui/gtk/statusbar.c: add 'pause'
	 functionality.
20031101 dxsound.[ch], Makefile.am, configure.in: DirectX sound routines
	 (Marek).
20031102 debugger/commandy.y, z80/z80.pl, z80/z80_macros.h: rename the
	 IN and OUT macros to avoid clashing with Win32's windows.h.
20031102 Makefile.am: revert unintended commit of DIST_SUBDIRS change.
20031103 Makefile.am, ui/Makefile.am: add DIST_SUBDIRS so all user
	 interfaces etc get into the dist tarball (thanks, Erik Kunze).
20031103 rzx.c: add Win32 timing routines (Marek).
20031103 fuse.c: add Win32 uname-like routines (Marek).
20031105 configure.in: explicitly link in zlib if using libpng.
20031105 event.[ch], z80/z80.[ch], z80/z80.pl: prevent interrupts from
	 being accepted immediately after an EI.